[gd_scene load_steps=7 format=3 uid="uid://drgbe6551a4os"]

[ext_resource type="Script" path="res://scripts/elements/spikes.gd" id="1_f0vy1"]
[ext_resource type="PackedScene" uid="uid://cvmv0ubhebeb7" path="res://scenes/components/kill_box.tscn" id="2_4wj46"]
[ext_resource type="Texture2D" uid="uid://hetqgqs68u6f" path="res://materials/spikes_off.png" id="2_brnay"]
[ext_resource type="PackedScene" uid="uid://c3gaovpivkad7" path="res://scenes/components/toggle.tscn" id="2_gfmnt"]
[ext_resource type="Texture2D" uid="uid://cpbnn0onl8q5l" path="res://materials/spikes_on.png" id="3_bnint"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8fyq1"]
size = Vector2(64, 13)

[node name="Spikes" type="Node2D"]
script = ExtResource("1_f0vy1")
off_texture = ExtResource("2_brnay")
on_texture = ExtResource("3_bnint")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_bnint")

[node name="Toggle" parent="." instance=ExtResource("2_gfmnt")]
is_player_toggleable = false
is_on = true

[node name="KillBox" parent="." instance=ExtResource("2_4wj46")]
ignore_groups = Array[StringName]([])

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox"]
position = Vector2(0, 25.5)
shape = SubResource("RectangleShape2D_8fyq1")
debug_color = Color(0.854902, 0, 0, 0.419608)

[connection signal="switched_off" from="Toggle" to="." method="_on_toggle_switched_off"]
[connection signal="switched_on" from="Toggle" to="." method="_on_toggle_switched_on"]
